--- a/packages/app/src/app/srs/card/card.component.scss
+++ b/packages/app/src/app/srs/card/card.component.scss
@@ -88,7 +88,6 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  padding: 16px;
 }
 
 .side-b {
