--- a/packages/app/src/styles/_hero.scss
+++ b/packages/app/src/styles/_hero.scss
@@ -2,7 +2,7 @@ $header-height: $header-items-height + $header-bottom-padding;
 
 .hero {
   height: calc(
-    var(--app-height) - #{$header-height} - #{$container-padding * 2}
+    var(--app-height) - #{$header-height} - var(--container-padding) * 2
   );
   display: flex;
   flex-direction: column;
